--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="header-main">
-                            <label class="logo"></label>
+                            <div class="logo-container"></div>
+                            <div class="menu-container">
                                 <ul>
                                     <li><a href="#"> home </a></li>
                                     <li><a href="#"> Product </a></li>
@@ -50,6 +51,7 @@
                                     <li><a href="#"> lorem </a></li>
                                     <li><a href="#"> ipsum</a></li>
                                 </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
