--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <h2 class="contact-heading">CONTACT US</h2>
         <div class="row">
             <div class="col-md-6 image-box">
-                <img src="./src/images/contact-form-r-bg.jpg" alt="" class="img-fluid">
+                <img src="./src/images/contact-vector.png" alt="" class="img-fluid">
             </div>
             <div class="col-md-6">
                     <div class="contact-card">
