--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         <section class="main-heading-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-3 offset-2">
+                    <div class="col-md-2">
+
+                    </div>
+                    <div class="col-md-3 offset-1">
                         <div class="heading-mail">
                             <p class="emailus">Email : <a href="#"> tsaha117@gmail.com </a> </p>
                         </div>
@@ -25,7 +28,7 @@
                             <p class="callus">Call us : <a href="#">9876483098 </a> </p>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <div class="heading-faq">
                             <a href="#" class="btn">FAQ</a>
                             <a href="#"  class="btn">LOREM</a>
