added testimonial slider

--- a/index.html
+++ b/index.html
@@ -252,17 +252,40 @@
 
     <!-- Testimonals section -->
 
-    <section class="Testimonals-section">
+    <section class="testimonials-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-5 image-box">
                     <img src="./src/images/girl.png" alt="" class="img-fluid">  
                 </div>
                 <div class="col-md-6">
-                    <img src="./src/images/comma.png" alt="" class="comma" >
-                    <div class="Testimonals">
-                        <h3 class="Testimonals-menu-heading">Testimonals</h3>
-                        <p class="Testimonals-text">If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of mod looks reasonable.</p>
+                    <div class="testimonial-main">
+                        <img src="./src/images/comma.png" alt="" class="comma" >
+                        <h3 class="testimonial-heading">Testimonals</h3>
+                        
+                        <div class="testimonials">
+                            <div class="testimonial">
+                                <p class="text">If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of mod looks reasonable.</p>
+                            </div>
+
+                            <div class="testimonial">
+                                <p class="text">If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of mod looks reasonable.</p>
+                            </div>
+
+                            <div class="testimonial">
+                                <p class="text">If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of mod looks reasonable.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="testimonial-nav">
+                        <button class="next">
+                            <i class="fas fa-chevron-left"></i>
+                        </button>
+
+                        <button class="prev">
+                            <i class="fas fa-chevron-right"></i>
+                        </button>
                     </div>
                 </div>
             </div> 
