--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col-12 col-md-3">
                         <div class="heading-faq">
                             <a href="#" class="btn">FAQ</a>
-                            <a href="#"  class="btn">LOREM</a>
+                            <a href="#"  class="btn">MEMBER LOGIN</a>
                         </div>
                     </div>
                 </div>
@@ -156,11 +156,11 @@
                         <thead>
                           <tr class="past-perform-table">
 
-                            <th scope="col">company</th>
-                            <th scope="col"> recommendation</th>
+                            <th scope="col">Stock</th>
+                            <th scope="col"> Recommended Date</th>
                             <th scope="col">performance</th>
-                            <th scope="col">remarks</th>
-                            <th scope="col">duration</th>
+                            <th scope="col">Investment Timeframe</th>
+                            <th scope="col">Holding Period</th>
 
                           </tr>
                         </thead>
@@ -307,7 +307,7 @@
         <div class="row justify-content-between">
             <div class="col-12 col-md-2">
                 <svg class="investment-img" enable-background="new 0 0 512 512"  viewBox="0 0 512 512"  xmlns="http://www.w3.org/2000/svg"><g><path d="m494.5 34.936h-477c-9.649 0-17.5 7.851-17.5 17.5v61.595c0 9.697 15 9.697 15 0v-61.595c0-1.378 1.121-2.5 2.5-2.5h477c1.379 0 2.5 1.122 2.5 2.5v365.739c0 1.378-1.121 2.5-2.5 2.5h-96.112v-15.606h75.434c4.143 0 7.5-3.358 7.5-7.5v-78.539c0-9.697-15-9.697-15 0v71.039h-67.934v-33.277c.244.021.49.042.721.063 6.226.547 13.97 1.228 19.335-4.147 5.359-5.369 4.681-13.121 4.136-19.35-.587-6.685.045-8.515 5.183-12.786 13.229-11 13.475-22.778 0-33.98-5.138-4.274-5.767-6.102-5.183-12.788 1.468-16.777-6.368-24.999-23.471-23.496-6.675.586-8.486-.048-12.742-5.187-10.983-13.26-22.769-13.505-33.956 0-4.256 5.138-6.066 5.775-12.741 5.187-16.789-1.475-24.97 6.405-23.472 23.496.584 6.687-.045 8.514-5.183 12.788-13.229 10.999-13.474 22.779 0 33.98 5.138 4.274 5.767 6.102 5.183 12.788-1.575 17.969 7.007 24.917 24.19 23.433v33.278h-294.709v-309.53h420.643v198.489c0 9.697 15 9.697 15 0v-205.989c0-4.142-3.357-7.5-7.5-7.5h-435.643c-4.143 0-7.5 3.358-7.5 7.5v324.528c0 4.142 3.357 7.5 7.5 7.5h302.209v15.606h-322.888c-1.379 0-2.5-1.122-2.5-2.5v-266.145c0-9.697-15-9.697-15 0v266.145c0 9.649 7.851 17.5 17.5 17.5h322.888v33.95c1.068 6.164 4.623 8.431 10.663 6.8l18.337-8.529 18.337 8.529c4.537 2.11 10.663-1.225 10.663-6.8v-33.95h96.112c9.649 0 17.5-7.851 17.5-17.5v-365.739c0-9.65-7.851-17.5-17.5-17.5zm-156.145 306.975c-7.508.661-7.872.259-7.216-7.245 1.008-11.517-1.641-18.237-10.536-25.631-6.086-5.061-6.085-5.85 0-10.911 8.895-7.394 11.545-14.114 10.536-25.63-.656-7.505-.292-7.903 7.216-7.246 11.518 1.015 18.229-1.654 25.606-10.561 5.041-6.084 5.812-6.084 10.853 0 7.379 8.907 14.088 11.572 25.606 10.561 7.509-.661 7.872-.259 7.216 7.245-1.008 11.517 1.641 18.236 10.536 25.63 6.085 5.061 6.088 5.852-.001 10.912-8.895 7.395-11.545 14.112-10.536 25.629.659 7.504.293 7.907-7.214 7.247-4.711-.414-10.055-.884-14.759 1.07-4.553 1.891-7.754 5.754-10.849 9.491-1.458 1.76-4.119 4.973-5.427 5.548-1.307-.575-3.968-3.788-5.426-5.548-3.095-3.736-6.295-7.6-10.849-9.491-4.854-1.48-9.773-1.837-14.756-1.07zm34.196 110.914c-2.006-.933-4.32-.933-6.326 0l-10.837 5.041v-92.349c3.559 3.913 7.95 7.546 14 7.546s10.441-3.632 14-7.545v92.348z"/><path d="m97.263 143.321h258.547c9.697 0 9.697-15 0-15h-258.547c-9.698 0-9.698 15 0 15z"/><path d="m422.237 181.439c0-4.142-3.357-7.5-7.5-7.5h-317.474c-9.697 0-9.697 15 0 15h317.475c4.142 0 7.499-3.358 7.499-7.5z"/><path d="m285.137 227.056c0-4.142-3.357-7.5-7.5-7.5h-180.374c-9.697 0-9.697 15 0 15h180.374c4.142 0 7.5-3.358 7.5-7.5z"/><path d="m186.651 331.598c-4.089.007-8.179.012-12.268.015-7.867.006-12.198-2.091-13.805-10.433-1.467-7.615-12.451-6.645-14.464 0-.891 2.943-5.391 11.368-9.322 10.679-2.083-.365-2.993-3.578-3.763-5.242-1.499-3.239-2.591-6.672-3.526-10.112-3.948-14.534-4.736-29.709-7.206-44.517-1.432-8.587-14.521-6.159-14.732 1.994-.672 25.971-4.918 51.586-14.164 75.929-3.431 9.033 11.064 12.939 14.464 3.988 3.565-9.386 6.395-18.997 8.591-28.751 1.178 3.554 2.583 7.04 4.298 10.431 4.38 8.656 13.313 13.777 22.871 9.927 3.411-1.374 6.523-3.776 9.172-6.699 7.096 8.183 17.653 7.812 27.502 7.8 14.847-.019 29.694-.054 44.542-.095 9.651-.027 9.669-15.027 0-15-12.73.036-25.46.065-38.19.086z"/><path d="m369.388 332.874c16.153 0 29.295-13.141 29.295-29.294s-13.142-29.294-29.295-29.294c-16.152 0-29.294 13.142-29.294 29.294s13.141 29.294 29.294 29.294zm0-43.588c7.882 0 14.295 6.413 14.295 14.294s-6.413 14.294-14.295 14.294-14.294-6.412-14.294-14.294 6.412-14.294 14.294-14.294z"/></g></svg>
-                <p class="Achievement-text">nism/nsm certified</p>
+                <p class="Achievement-text">NISM/NCFM certified</p>
             </div>
             <div class="col-12 col-md-2">
                 <svg class="investment-img" enable-background="new 0 0 64 64" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg"><g><path d="m44.293 28.293-11.707 11.707h-4.586v-2h-.026c1.928-1.443 3.326-3.557 3.824-6h.202c2.206 0 4-1.794 4-4 0-1.006-.385-1.915-1-2.618v-3.382c0-7.168-5.832-13-13-13s-13 5.832-13 13v3.382c-.615.703-1 1.612-1 2.618 0 2.206 1.794 4 4 4h.202c.498 2.443 1.896 4.557 3.824 6h-.026v2h-5c-5.514 0-10 4.486-10 10v12c0 .553.447 1 1 1h40c.553 0 1-.447 1-1v-12c0-4.768-3.357-8.761-7.83-9.756l10.244-10.244h17.586v-2h-18c-.266 0-.52.105-.707.293zm-27.762 13.707 3.892 4.67-3.839 1.919-2.197-6.589zm5.289 11h.361l1.6 8h-3.561zm.562-2h-.764l-1.076-2.153 1.458-.729 1.458.729zm1.195-4.33 3.892-4.67h2.144l-2.197 6.59zm8.423-16.67v-4c1.103 0 2 .897 2 2s-.897 2-2 2zm-22-2c0-1.103.897-2 2-2v4c-1.103 0-2-.897-2-2zm2-4c-.347 0-.678.058-1 .142v-2.142c0-6.065 4.935-11 11-11s11 4.935 11 11v2.142c-.322-.084-.653-.142-1-.142 0-.553-.447-1-1-1-1.565 0-3.061-.748-4-2.001l-1.2-1.6c-.377-.502-1.223-.502-1.6 0l-1.2 1.601c-.939 1.252-2.435 2-4 2h-6c-.553 0-1 .447-1 1zm2 6v-5h5c2.191 0 4.285-1.047 5.6-2.8l.4-.534.4.533c1.113 1.484 2.783 2.463 4.6 2.728v5.073c0 4.411-3.589 8-8 8s-8-3.589-8-8zm8 10c1.422 0 2.774-.303 4-.841v1.479l-4 4.8-4-4.8v-1.479c1.226.538 2.578.841 4 .841zm-19 10c0-4.411 3.589-8 8-8h1.28l2.772 8.316c.091.274.298.496.565.607.123.052.253.077.383.077.153 0 .307-.035.447-.105l2.305-1.153 1.199 2.399-1.771 8.859h-9.18v-6h-2v6h-4zm38 0v11h-4v-6h-2v6h-9.18l-1.772-8.859 1.199-2.399 2.305 1.153c.141.07.295.105.448.105.13 0 .26-.025.383-.076.268-.111.475-.333.565-.607l2.772-8.317h1.28c4.411 0 8 3.589 8 8z"/><path d="m61 24v-14c0-.553-.447-1-1-1h-4c-.553 0-1 .447-1 1v14h-2v-8c0-.553-.447-1-1-1h-4c-.553 0-1 .447-1 1v8h-2v-5c0-.553-.447-1-1-1h-4c-.553 0-1 .447-1 1v5h-2v2h26v-2zm-4-13h2v13h-2zm-8 6h2v7h-2zm-8 3h2v4h-2z"/><path d="m46.414 7h5.586c.266 0 .52-.105.707-.293l2.293-2.293v2.586h2v-5c0-.553-.447-1-1-1h-5v2h2.586l-2 2h-5.586c-.266 0-.52.105-.707.293l-6 6 1.414 1.414z"/></g></svg>
@@ -319,7 +319,7 @@
             </div>
             <div class="col-12 col-md-2">
                <svg class="investment-img" enable-background="new 0 0 512.25 512.25"  viewBox="0 0 512.25 512.25" xmlns="http://www.w3.org/2000/svg"><path d="m106.224 26.653c6.308-5.371 7.067-14.837 1.696-21.145-5.37-6.306-14.837-7.067-21.145-1.696-43.651 37.169-74.306 88.28-86.318 143.919-1.748 8.098 3.399 16.08 11.497 17.828 1.067.23 2.131.341 3.18.341 6.912 0 13.13-4.807 14.647-11.837 10.631-49.238 37.778-94.486 76.443-127.41z"/><path d="m511.792 147.731c-12.012-55.639-42.666-106.75-86.316-143.918-6.309-5.373-15.775-4.612-21.145 1.696-5.371 6.307-4.612 15.774 1.696 21.145 38.664 32.922 65.811 78.17 76.441 127.408 1.518 7.031 7.735 11.837 14.647 11.837 1.048 0 2.114-.11 3.18-.341 8.098-1.747 13.246-9.729 11.497-17.827z"/><path d="m87.53 171.216c7.004-37.266 26.663-71.707 55.354-96.977 6.217-5.476 6.818-14.954 1.342-21.17-5.475-6.216-14.954-6.819-21.17-1.342-33.689 29.67-56.776 70.138-65.009 113.948-1.53 8.142 3.83 15.982 11.971 17.512.936.176 1.868.261 2.787.261 7.074.001 13.371-5.026 14.725-12.232z"/><path d="m389.197 51.729c-6.217-5.475-15.695-4.875-21.171 1.342s-4.875 15.695 1.342 21.171c28.69 25.27 48.348 59.71 55.352 96.976 1.354 7.206 7.65 12.232 14.725 12.232.919 0 1.852-.085 2.787-.261 8.142-1.53 13.501-9.371 11.972-17.512-8.234-43.81-31.32-84.277-65.007-113.948z"/><path d="m397.665 300.207v-97.227c0-62.321-40.488-115.36-96.54-134.205v-23.775c0-24.813-20.187-45-45-45s-45 20.187-45 45v23.775c-56.053 18.844-96.541 71.883-96.541 134.205v97.227c0 16.083-5.922 31.528-16.675 43.49-15.712 17.477-24.365 40.044-24.365 63.546v21.457c0 12.985 10.564 23.55 23.55 23.55h98.073c.527 33.173 27.659 60 60.955 60h.006c33.296 0 60.428-26.827 60.955-60h98.073c12.985 0 23.55-10.565 23.55-23.55v-21.458c0-23.501-8.653-46.069-24.365-63.546-10.754-11.961-16.676-27.406-16.676-43.489zm-156.54-255.207c0-8.271 6.729-15 15-15s15 6.729 15 15v17.234c-4.93-.521-9.934-.795-15-.795s-10.07.273-15 .795zm-96.541 157.98c0-61.504 50.037-111.541 111.541-111.541s111.54 50.037 111.54 111.541v97.227c0 22.839 8.193 44.782 23.075 62.043h-269.231c14.882-17.26 23.075-39.203 23.075-62.043zm111.544 279.27h-.006c-16.755 0-30.446-13.369-30.965-30h61.936c-.519 16.631-14.21 30-30.965 30zm152.577-60h-106.597-91.966-106.598v-15.007c0-5.092.598-10.119 1.75-14.993h301.661c1.153 4.874 1.75 9.901 1.75 14.993z"/></svg>
-                <p class="Achievement-text">Lorem Ipsum</p>
+                <p class="Achievement-text">Subscribers from 15+ cities in India,USA,Singapore & UAE</p>
             </div>
         </div>
     </div>
@@ -332,6 +332,7 @@
                <h2 class="blogheading">BLOG</h2>
             <div class="row justify-content-between gy-5">
                 <div class="col-12 col-md-5">
+                    <a href="#" class="blog-link">
                     <div class="card" >
                         <img class="card-img-top" src="./src/images/blog-1.png" alt="Card image">
                         <div class="card-body">
@@ -339,8 +340,10 @@
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod, quaerat totam! Vel porro, deleniti voluptates, sunt esse earum repellendus enim inventore laudantium delectus consequatur quisquam modi tempora ipsam non placeat.</p>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-12 col-md-5">
+                    <a href="#" class="blog-link">
                     <div class="card" >
                         <img class="card-img-top" src="./src/images/blog2.png" alt="Card image" style="width:100%">
                         <div class="card-body">
@@ -348,8 +351,10 @@
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod, quaerat totam! Vel porro, deleniti voluptates, sunt esse earum repellendus enim inventore laudantium delectus consequatur quisquam modi tempora ipsam non placeat.</p>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-12 col-md-5">
+                    <a href="#" class="blog-link">
                     <div class="card" >
                         <img class="card-img-top" src="./src/images/blog3.png" alt="Card image" >
                         <div class="card-body">
@@ -357,8 +362,10 @@
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod, quaerat totam! Vel porro, deleniti voluptates, sunt esse earum repellendus enim inventore laudantium delectus consequatur quisquam modi tempora ipsam non placeat.</p>
                         </div>
                     </div>
+                    </a>
                 </div>
                 <div class="col-12 col-md-5">
+                    <a href="#" class="blog-link">
                     <div class="card" >
                         <img class="card-img-top" src="./src/images/blog4.jpg" alt="Card image" >
                         <div class="card-body">
@@ -366,6 +373,7 @@
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod, quaerat totam! Vel porro, deleniti voluptates, sunt esse earum repellendus enim inventore laudantium delectus consequatur quisquam modi tempora ipsam non placeat.</p>
                         </div>
                     </div>
+                    </a>
                 </div>
 
                 <div class="col-12 d-flex justify-content-center mb-5">
