footer section dynamic

--- a/index.html
+++ b/index.html
@@ -443,10 +443,10 @@
                 <div class="footer-text">
                         <h4 class="footer-heading">LOREM IPSUM DOLOR</h4>
                     <UL class=" footer-menu1">
-                        <li>sit amet</li>
-                        <li>IPSUM QUIS VARIUS</li>
-                        <li>NHAC HABLTASSE PLATEA DISTUMST</li>
-                        <li>NHAC HABLTASSE PLATEA DISTUMST</li>
+                        <li><a href="#">sit amet</a></li>
+                        <li><a href="#">IPSUM QUIS VARIUS</a></li>
+                        <li><a href="#">NHAC HABLTASSE PLATEA DISTUMST</a></li>
+                        <li><a href="#">NHAC HABLTASSE PLATEA DISTUMST</a></li>
                     </UL>
                 </div>
             </div>
@@ -454,10 +454,10 @@
                 <div class="footer-text">
                     <h4 class="footer-heading">PRODUCT</h4>
                     <UL class=" footer-menu2">
-                        <li>sit amet</li>
-                        <li>IPSUM QUIS VARIUS</li>
-                        <li>NHAC HABLTASSE PLATEA DISTUMST</li>
-                        <li>NHAC HABLTASSE PLATEA DISTUMST</li>
+                        <li><a href="#">sit amet</a></li>
+                        <li><a href="#">IPSUM QUIS VARIUS</a></li>
+                        <li><a href="#">NHAC HABLTASSE PLATEA DISTUMST</a></li>
+                        <li><a href="#">NHAC HABLTASSE PLATEA DISTUMST</a></li>
                     </UL>
                 </div>
             </div>
@@ -465,9 +465,9 @@
                 <div class="footer-text">
                     <h4 class="footer-heading">CONTACT</h4>
                     <ul class="footer-menu3">
-                        <li><i class="fab fa-facebook-f"></i></li>
-                        <li><i class="fab fa-instagram"></i></li>
-                        <li><i class="fab fa-twitter"></i></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                     </ul>       
                 </div>
             </div>
