fixed heading responsive

--- a/index.html
+++ b/index.html
@@ -12,58 +12,76 @@
 <body>  
     <body>
     <div class="hero-bg">
-        <section class="main-heading-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12 col-md-2">
+        <div class="header-content-wrapper">
+            <section class="main-heading-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-md-3 offset-md-4 d-flex flex-column justify-content-center">
+                            <p class="heading-link">Email : <a href="#"> tsaha117@gmail.com </a> </p>
+                        </div>
+                        <div class="col-12 col-md-2 d-flex flex-column justify-content-center">
+                            <p class="heading-link">Call us : <a href="#">9876483098 </a> </p>
+                        </div>
+                        <div class="col-12 col-md-3">
+                            <div class="heading-faq">
+                                <a href="#" class="btn me-4">FAQ</a>
+                                <a href="#"  class="btn">MEMBER LOGIN</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        
+            </section>
+            <!--start heading-section -->
+            <header class="heading-section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="header-main">
+                                <div class="logo-container">
+                                    <img src="./src/images/logo.png" alt="" class="logo img-fluid">
+                                </div>
+                                <div class="menu-container">
+                                    <ul>
+                                        <li><a href="#"> home </a></li>
+                                        <li><a href="#"> Product </a></li>
+                                        <li><a href="#"> Facilities </a></li>
+                                        <li><a href="#"> Contacts </a></li>
+                                        <li><a href="#"> Gallery </a></li>
+                                        <li><a href="#"> lorem </a></li>
+                                        <li><a href="#"> ipsum</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </header>   
+            <!-- end heading-section -->
+        </div>
 
-                    </div>
-                    <div class="col-12 col-md-3 offset-md-1">
-                        <div class="heading-mail">
-                            <p class="emailus">Email : <a href="#"> tsaha117@gmail.com </a> </p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-2">
-                        <div class="heading-call">
-                            <p class="callus">Call us : <a href="#">9876483098 </a> </p>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <div class="heading-faq">
-                            <a href="#" class="btn">FAQ</a>
-                            <a href="#"  class="btn">MEMBER LOGIN</a>
-                        </div>
-                    </div>
-                </div>
+        <div class="responsive-header-container">
+            <div class="logo-container">
+                <img src="./src/images/logo.png" alt="">
             </div>
-    
-        </section>
-        <!--start heading-section -->
-       <section class="heading-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="header-main">
-                            <div class="logo-container">
-                                <img src="./src/images/logo.png" alt="" class="logo img-fluid">
-                            </div>
-                            <div class="menu-container">
-                                <ul>
-                                    <li><a href="#"> home </a></li>
-                                    <li><a href="#"> Product </a></li>
-                                    <li><a href="#"> Facilities </a></li>
-                                    <li><a href="#"> Contacts </a></li>
-                                    <li><a href="#"> Gallery </a></li>
-                                    <li><a href="#"> lorem </a></li>
-                                    <li><a href="#"> ipsum</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+            <div class="icon-container">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-phone-alt"></i>
+                            <span>contact@vantage.com</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fas fa-envelope"></i>
+                            <span>+91 9331522660</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
-        </section>   
-        <!-- end heading-section -->
+        </div>
 
         <!-- Hero section -->
         <section class="hero-sec">
